tests/invalid/global_variables/var_redefined_as_fun.rs
/*
compilationExitCode: 3
*/

foo: i64 = 4;

foo(): i64 {
    return 3;
}

main(): i32 {
    return foo;
}